Use kotlin DSL for gradle

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: SchematicsExtended
-version: @version@
-main: net.islandearth.schematics.extended.example.SchematicPlugin
+version: "${version}"
+main: com.convallyria.schematics.extended.example.SchematicPlugin
 api-version: 1.17
 load: STARTUP
 authors: [SamB440, brainsynder, Math0424]
